--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <body>
         <div class="head_info">Planet Demo</div>
         <script type="text/javascript" src="libs/debug/stats.min.js"></script>
-        <script type="text/javascript" src="libs/control/TrackballControls.js"></script>
         <script type="text/javascript" src="libs/ui/dat.gui.min.js"></script>
         <script type="text/javascript" src="libs/geo/topojson-3.0.0.js"></script>
+        <script type="text/javascript" src="app/PlanetViewControler.js"></script>
         <script type="text/javascript" src="app/LoadProgress.js"></script>
         <script type="text/javascript" src="app/FileLoader.js"></script>
         <script type="text/javascript" src="app/Geometry.js"></script>
