--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Start</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0">
-        <link rel="stylesheet" href="style/main.css">
-        <script type="text/javascript" src="libs/jquery-2.1.1.js"></script>
-        <script type="text/javascript" src="libs/three.js"></script>
-        <script type="text/javascript" src="libs/when.js"></script>
-        <script type="text/javascript" src="libs/Detector.js"></script>
-    </head>
-    <body>
-        <div class="head_info">Planet Demo</div>
-        <script type="text/javascript" src="libs/debug/stats.min.js"></script>
-        <script type="text/javascript" src="libs/ui/dat.gui.min.js"></script>
-        <script type="text/javascript" src="libs/geo/topojson-3.0.0.js"></script>
-        <script type="text/javascript" src="app/PlanetViewControler.js"></script>
-        <script type="text/javascript" src="app/LoadProgress.js"></script>
-        <script type="text/javascript" src="app/FileLoader.js"></script>
-        <script type="text/javascript" src="app/Geometry.js"></script>
-        <script type="text/javascript" src="app/Planet.js"></script>
-        <script type="text/javascript" src="app/RayMarching.js"></script>
-        <script type="text/javascript" src="app/Contorls.js"></script>
-    </body>
+
+<head>
+    <title>Start</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0">
+    <link rel="stylesheet" href="style/main.css">
+    <script type="text/javascript" src="libs/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="libs/three.js"></script>
+    <script type="text/javascript" src="libs/when.js"></script>
+    <script type="text/javascript" src="libs/Detector.js"></script>
+</head>
+
+<body>
+    <div class="head_info">Planet Demo</div>
+    <script type="text/javascript" src="libs/debug/stats.min.js"></script>
+    <script type="text/javascript" src="libs/ui/dat.gui.min.js"></script>
+    <script type="text/javascript" src="libs/geo/topojson-3.0.0.js"></script>
+    <script type="text/javascript" src="app/PlanetViewControler.js"></script>
+    <script type="text/javascript" src="app/LoadProgress.js"></script>
+    <script type="text/javascript" src="app/FileLoader.js"></script>
+    <script type="text/javascript" src="app/Geometry.js"></script>
+    <script type="text/javascript" src="app/Planet.js"></script>
+    <script type="text/javascript" src="app/RayMarching.js"></script>
+    <script type="text/javascript" src="app/App.js"></script>
+</body>
+
 </html>
