--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="app/FileLoader.js"></script>
     <script type="text/javascript" src="app/Geometry.js"></script>
     <script type="text/javascript" src="app/Planet.js"></script>
+    <script type="text/javascript" src="app/drawMod/Planet_text.js"></script>
     <script type="text/javascript" src="app/RayMarching.js"></script>
     <script type="text/javascript" src="app/App.js"></script>
 </body>
