--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="app/Geometry.js"></script>
     <script type="text/javascript" src="app/Planet.js"></script>
     <script type="text/javascript" src="app/drawMod/Planet_Text.js"></script>
+    <script type="text/javascript" src="app/drawMod/Planet_Line.js"></script>
     <script type="text/javascript" src="app/drawMod/Planet_Spark.js"></script>
     <script type="text/javascript" src="app/RayMarching.js"></script>
     <script type="text/javascript" src="app/App.js"></script>
